@@ -867,6 +867,7 @@ I)*x + (-0.0064055991688804413829736007101014212258 + 0.51526489380605352673
 450*I)*x^2 + (9.2420957758989707670959015639234112401 - 0.450495026534426142
 94207267772156672859*I)*x + (-0.61189800800168155000144831291875936999 - 0.0
 33316392602605981857006660342857673457*I)]
+[0, 0]
 1.0024642466164642932880429736720212519 E-5
 
 [1.0616767679426667234166859887525352956 E-5 0]
@@ -1625,4 +1626,4 @@ od(0, t^16 + 1), Mod(3/8*t^11, t^16 + 1), Mod(0, t^16 + 1)]
   ***   at top-level: ...,0);[F]=mfeigenbasis(mf);mfpow(F,3)
   ***                                             ^----------
   *** mfpow: sorry, changing cyclotomic fields in mf is not yet implemented.
-Total time spent: 7174
+Total time spent: 7214
