@@ -353,6 +353,7 @@ mfsymboleval(f1,[1/2 + I/20,oo])
 mfsymboleval(f1,[1/2 + I/(20+1e-10),oo])
 mfsymboleval(f1,[1/3,1/2])
 mfsymboleval(f2,[1/3,1/2])
+mfsymboleval(f2,[1/2,1/2]) \\ #2260
 mfpetersson(f1)
 m=mfpetersson(f2);
 if (abs(m[2,1]) < 1e-38, m[2,1]=0);
